fixed and edited scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -90,22 +90,37 @@
     }
     100%{
         text-shadow: none;
-    }
-
-    
+    }  
 }
  
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #2c2222;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(36, 1, 1);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(24, 0, 0);
+  }
 
 body{
   
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='900' preserveAspectRatio='none' viewBox='0 0 1440 900'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1020%26quot%3b)' fill='none'%3e%3crect width='1440' height='900' x='0' y='0' fill='url(%23SvgjsLinearGradient1021)'%3e%3c/rect%3e%3cpath d='M1440 0L1205.31 0L1440 17.56z' fill='rgba(255%2c 255%2c 255%2c .1)'%3e%3c/path%3e%3cpath d='M1205.31 0L1440 17.56L1440 121.79L609.29 0z' fill='rgba(255%2c 255%2c 255%2c .075)'%3e%3c/path%3e%3cpath d='M609.29 0L1440 121.79L1440 564.3199999999999L310.65999999999997 0z' fill='rgba(255%2c 255%2c 255%2c .05)'%3e%3c/path%3e%3cpath d='M310.65999999999985 0L1440 564.3199999999999L1440 572.43L171.89999999999986 0z' fill='rgba(255%2c 255%2c 255%2c .025)'%3e%3c/path%3e%3cpath d='M0 900L689.88 900L0 676.21z' fill='rgba(0%2c 0%2c 0%2c .1)'%3e%3c/path%3e%3cpath d='M0 676.21L689.88 900L818.31 900L0 394.65000000000003z' fill='rgba(0%2c 0%2c 0%2c .075)'%3e%3c/path%3e%3cpath d='M0 394.65L818.31 900L991.79 900L0 267.51z' fill='rgba(0%2c 0%2c 0%2c .05)'%3e%3c/path%3e%3cpath d='M0 267.51L991.79 900L1103.98 900L0 180.95z' fill='rgba(0%2c 0%2c 0%2c .025)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1020'%3e%3crect width='1440' height='900' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='9.37%25' y1='-15%25' x2='90.63%25' y2='115%25' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1021'%3e%3cstop stop-color='rgba(71%2c 14%2c 35%2c 1)' offset='0.66'%3e%3c/stop%3e%3cstop stop-color='rgba(17%2c 18%2c 18%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
-
-  height: 100vh; 
+    height: 100vh; 
     width: 100%;
-    overflow: hidden;
-
-
 }
+
+
     #navbar{
      background: 50%;
      border: 1px solid grey;
@@ -373,7 +388,7 @@ body{
     #result-container{
         
         margin: auto;
-       
+        overflow: hidden;
         position: absolute;
         left : 0px;
         top: 30%;
